update swagger configs
